--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
-
+html{
+    scroll-behavior: smooth;
+}
 
 
 .navbar{
@@ -49,10 +51,40 @@ a:hover {
   
 }
 
+#cart:hover{
+    cursor: pointer;
+}
+#logo:hover{
+    cursor: pointer;
+}
+
 p{
     color: #26001b;
 }
 
+#name{
+    cursor:pointer;
+    opacity: 0;
+    position: absolute;
+    left: 35%;
+    margin-top: 8px;
+    transition: all 0.5s;
+}
+
+#product{
+    transition: transform 1s;
+}
+
+#product:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    
+}
+#product:hover +#name{
+    
+    opacity: 1;
+}
 
 
 .container{
@@ -129,7 +161,7 @@ p{
 }
 .page2 img{
     max-width: 100%;
-    height: auto;
+    
     
 }
 
@@ -157,12 +189,19 @@ p{
 .category-col{
     flex-basis: 30%;
     min-width: 250px;
+    max-width: 100%;
     margin-bottom: 20px;
+    
+   
+    
 }
 
 .category-col img{
-    width: 100%;
+    
+    min-width: 100%;
     padding: 10px;
+    max-width: 100%;
+    display: b;
 }
 
 .small-container
@@ -177,7 +216,7 @@ p{
     flex-basis: 25%;
     padding: 10px;
     min-width: 220px;
-    margin-bottom: 55px;
+    margin-bottom: 25px;
     transition: transform 0.5s;
 }
 
@@ -206,30 +245,33 @@ p{
     left: 50%;
     transform: translateX(-50%);
 }
-.rating .fas{
-   font-size: 20px;
-   color: #9c47fc;
-   background: -webkit-linear-gradient(#23a6d5, #23d5ab);
-   -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
 
-}
-.rating .far{
-    font-size: 20px;
+.star{ 
+   font-style: normal;
+   font-weight: bold;
+    font-size: 28px;
     color: #9c47fc;
     background: -webkit-linear-gradient(#23a6d5, #23d5ab);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
- 
- }
-.fa-star i:hover
-{
-    font-size: 20px;
-    color: #9c47fc im !important;
-    background: -webkit-linear-gradient(#23a6d5, #23d5ab);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    cursor: pointer;
 }
+
+.star::before{
+    content: "\2605";
+}
+
+.star.active ~ .star::before{
+    content:"\2606";
+}
+.rating:hover .star::before{
+    content: "\2605";
+}
+.star:hover ~ .star::before{
+    content: "\2606";
+}
+
+
 
 
 .product-col:hover
