--- a/style.css
+++ b/style.css
@@ -220,6 +220,12 @@ p{
     transition: transform 0.5s;
 }
 
+.product-col:hover
+{
+    transform: scale(1.025);
+    box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.15);
+}
+
 .product-col img{
     width: 100%;
     
@@ -246,7 +252,7 @@ p{
     transform: translateX(-50%);
 }
 
-.star{ 
+.product-col i{ 
    font-style: normal;
    font-weight: bold;
     font-size: 28px;
@@ -272,11 +278,54 @@ p{
 }
 
 
-
-
-.product-col:hover
-{
-    transform: scale(1.025);
-    box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.15);
+.star1::before{
+    content: "\2605";
 }
+
+.star1.active ~ .star1::before{
+    content:"\2606";
+}
+.rating2:hover .star1::before{
+    content: "\2605";
+}
+.star1:hover ~ .star1::before{
+    content: "\2606";
+}
+
+.star2::before{
+    content: "\2605";
+}
+
+.star2.active ~ .star2::before{
+    content:"\2606";
+}
+.rating3:hover .star2::before{
+    content: "\2605";
+}
+.star2:hover ~ .star2::before{
+    content: "\2606";
+}
+
+.star3::before{
+    content: "\2605";
+}
+
+.star3.active ~ .star3::before{
+    content:"\2606";
+}
+.rating4:hover .star3::before{
+    content: "\2605";
+}
+.star3:hover ~ .star3::before{
+    content: "\2606";
+}
+
+
+
+
+
+
+
+
+
 
